--- a/paint.html
+++ b/paint.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <script id="vertex-shader" type="x-shader/x-vertex">
-    attribute vec3 vPosition;
+<!-- Vertex Shader -->
+<script id="vertex-shader" type="x-shader/x-vertex">
+    attribute vec4 vPosition;
     attribute vec4 vColor;
     varying vec4 fColor;
 
-    void main()
-    {
-        gl_Position = vec4(vPosition, 1.0);
+    void main() {
+        gl_Position = vPosition;
         fColor = vColor;
     }
-    </script>
+</script>
 
-    <script id="fragment-shader" type="x-shader/x-fragment">
+<!-- Fragment Shader -->
+<script id="fragment-shader" type="x-shader/x-fragment">
     precision mediump float;
     varying vec4 fColor;
 
-    void main()
-    {
+    void main() {
         gl_FragColor = fColor;
     }
-    </script>
+</script>
 
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="Common/webgl-utils.js"></script>
