new js file, now drawing a normal line

--- a/paint.html
+++ b/paint.html
@@ -23,10 +23,7 @@
 </script>
 
     <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="Common/webgl-utils.js"></script>
-    <script type="text/javascript" src="Common/initShaders.js"></script>
-    <script type="text/javascript" src="Common/MV.js"></script>
-    <script type="text/javascript" src="paint.js"></script>
+
 
     <body style="background-color: #9c0c54;">
         <div class="container" style="display:flex;">
@@ -106,5 +103,12 @@
                 </div>
             </div>
         </div>
+    <script type="text/javascript" src="Common/webgl-utils.js"></script>
+    <script type="text/javascript" src="Common/initShaders.js"></script>
+    <script type="text/javascript" src="Common/MV.js"></script>
+    <script type="text/javascript" src="iro.min.js"></script>
+    <script type="text/javascript" src="paint.js"></script>
+
+
     </body>
 </html>
