--- a/paint.html
+++ b/paint.html
@@ -76,22 +76,19 @@
                               <div class="rad-design"></div>
                               <div class="rad-text" id="3">Layer 3</div>
                             </label>
-                            <label class="rad-label">
-                              <input type="radio" class="rad-input" value="4" id="lay4" name="rad">
-                              <div class="rad-design"></div>
-                              <div class="rad-text" id="4">Layer 4</div>
-                            </label>
                         </div>
                         <button id="aboveBtn" style = "display:block; border-radius: 10%; background-color: #34ca2f; width:200px; padding: 10px 25px;margin-left:25%; margin-bottom: 3px; font-size: x-large;">Move Above</button>
                         <button id="belowBtn" style = "display:block; border-radius: 10%; background-color: #e03e3e; width:200px; padding: 10px 25px;margin-left:25%; font-size: x-large;">Move Below</button>
                         <button id="moveBtn" class="era" style="font-size: x-large;">Move a Part</button>
-                        <div style="display:block; margin-left: 38%; margin-top: 20px;  size: 20px; ">
-                                <button id="undo"  class="button" ><img src=undo.png height="30"></button>
-                                <button id="redo"  class="button" ><img src=redo.png height="30"></button>
+                        <div style="display:block; margin-left: 38%; margin-top: 20px;  size: 30px; ">
+                                <button id="undo"  class="button" ><img src=undo.png height="40"></button>
+                                <button id="redo"  class="button" ><img src=redo.png height="40"></button>
                                 </div>
-                            <div style="display:block; margin-left: 38%; margin-top: 20px;  size: 20px; ">
-                                <button id="brush-btn"  class="clicked" ><img src=brush.png height="30"></button>
-                                <button id="eraser"  class="button" ><img src=eraser.png height="30"></button>
+                            <div style="display:block; margin-left: 38%; margin-top: 20px;  size: 30px; ">
+                                <button id="brush-btn"  class="clicked" ><img src=brush.png height="40"></button>
+                                <button id="eraser"  class="button" ><img src=eraser.png height="40"></button>
+                                <button id="zoomin"  class="button" ><img src=zoomin.png height="40"></button>
+
                                 </div>
                         </div>
                     </div>
