save/load option
eraser ve undo kısmı sıkıntılı

--- a/paint.html
+++ b/paint.html
@@ -57,9 +57,8 @@
                     <div>
                         <button id="saveBtn" style = "display:block; border-radius: 10%; background-color: #2fba7b; width:200px; padding: 10px 25px; margin-left:25%; margin-top: 12%; margin-bottom: 3px; font-size: x-large">Save</button>
                         <input type="file" id="up-file" hidden="hidden"/>
-                        <button type="button" id="selectBtn" style = "display:block; border-radius: 10%; background-color: #2f64ba; width:200px; padding: 10px 25px;margin-left:25%; font-size: x-large">Choose a File</button>
-                        <span id="txt" style = "display:block; padding-top: 25px; width:200px; padding-bottom: 25px; margin-left: 25%; font-size: 20px; color: #00FF00;">No file chosen, yet.</span>
-                        <button id="uplBtn" style = "display:block; border-radius: 10%; background-color: #2fba7b; width:200px; padding: 10px 25px;margin-left:25%; margin-bottom: 3px; font-size: x-large">Load From a Save</button>
+                        <button type="button" id="selectBtn" style = "display:block; border-radius: 10%; background-color: #2f64ba; width:200px; padding: 10px 25px;margin-left:25%; font-size: x-large">Upload a File</button>
+                        <span id="txt" style = "display:block; padding-top: 25px; width:200px; padding-bottom: 25px; margin-left: 25%; font-size: 30px; color: #abc2cb;">No file chosen</span>
                         <div class="layer-div">
                             <label class="rad-label">
                               <input type="radio" class="rad-input" value="1" id="lay1" name="rad" checked="checked">
