copy button and feature added

--- a/paint.html
+++ b/paint.html
@@ -78,6 +78,7 @@
                         </div>
                         <button id="aboveBtn" style = "display:block; border-radius: 10%; background-color: #34ca2f; width:200px; padding: 10px 25px;margin-left:25%; margin-bottom: 3px; font-size: x-large;">Move Above</button>
                         <button id="belowBtn" style = "display:block; border-radius: 10%; background-color: #e03e3e; width:200px; padding: 10px 25px;margin-left:25%; font-size: x-large;">Move Below</button>
+                        <button id="copyBtn" class="era" style="font-size: x-large;">Copy</button>
                         <button id="moveBtn" class="era" style="font-size: x-large;">Move a Part</button>
                         <div style="display:block; margin-left: 38%; margin-top: 20px;  size: 30px; ">
                                 <button id="undo"  class="button" ><img src=undo.png height="40"></button>
